# rpi-ocv-vid

./: App.hpp  CMakeLists.txt  README.md  VideoProcessing.hpp  rpi-ocv-vid.cpp
